--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "platzimusic",
   "description": "Proyecto del Curso de Introduccion a Vue.js de Platzi",
   "version": "1.0.0",
-  "author": "slifszyc",
+  "author": "pixelciosa",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
