cambio de nombre

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "platzimusic",
+  "name": "TopArtists",
   "description": "Proyecto del Curso de Introduccion a Vue.js de Platzi",
   "version": "1.0.0",
   "author": "pixelciosa",
